Fix Today titles color in dark mode

--- a/static/today.css
+++ b/static/today.css
@@ -128,7 +128,7 @@ body {
 .task {
   display: flex;
   align-items: center;
-  background: #1e1e1e;
+  background: #2f2a2a;
   border-radius: 12px;
   padding: 15px;
   margin-bottom: 12px;
